# Akidzuki-CLI

./: .gitignore  MANIFEST.in  README.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
akidzuki_cli/: cli.py  main.py  settings.py
akidzuki_cli/config/: __init__.py  manager.py
akidzuki_cli/models/: __init__.py  connection.py
akidzuki_cli/services/: __init__.py  connection_service.py  session_service.py
akidzuki_cli/ssh/: __init__.py  client.py  session.py
akidzuki_cli/ui/: __init__.py  connection_view.py  menu.py
akidzuki_cli/utils/: __init__.py  export_import.py  keyboard_handler.py  logger.py  validators.py
